# FYS4411

./: .gitignore
project1/: CMakeLists.txt  Makefile  blockinator.py  compile.sh  img2nums.py  main  main.cc  readme.md
project1/include/: ElipticalWF.hh  ParticleSystem.hh  Random.hh  SphericalWF.hh  alphaSamplers.hh  createState.hh  mcSampler.hh  metMCSampler.hh  methasMCSampler.hh  onebody.hh  particle.hh  samplers.hh  utils.hh  waveFunction.hh
project1/plot/: plot.py
project1/src/: Particle.cc  SphericalWF.cc  createState.cc
project2/: CMakeLists.txt  Makefile  blockinator.py  main.cc  plot.py  readme.md  results.txt
project2/include/: ParticleSystem.hh  RBMWF.hh  WaveFunction.hh  energyMinimizer.hh  mcSampler.hh  testRBMWF.hh  utils.hh
